[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feed-baby"
version = "0.1.0"
description = "Baby feeding tracker application"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Austin Pray", email = "austin@austinpray.com"}
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "jinja2==3.1.4",
    "pendulum==3.0.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["feed_baby*"]
exclude = ["tests*", "migrations*", "templates*"]
