[project]
name = "feed-baby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "icalendar>=6.3.2",
    "jinja2>=3.1.6",
    "pendulum>=3.1.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "lefthook>=2.0.9",
    "pytest>=8.0.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]
